# Watch-Repair

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
watch_repair/: hooks.py  modules.txt  schedular.py
watch_repair/config/: desktop.py  docs.py
watch_repair/doc_events/: item.py  sales_invoice.py  stock_entry.py
watch_repair/fixtures/: custom_field.json
watch_repair/public/js/: item.js  sales_invoice.js
watch_repair/watch_repair/doctype/anchor/: anchor.js  anchor.json  anchor.py  test_anchor.py
watch_repair/watch_repair/doctype/b_gasket/: b_gasket.js  b_gasket.json  b_gasket.py  test_b_gasket.py
watch_repair/watch_repair/doctype/back_washer/: back_washer.js  back_washer.json  back_washer.py  test_back_washer.py
watch_repair/watch_repair/doctype/battery/: battery.js  battery.json  battery.py  test_battery.py
watch_repair/watch_repair/doctype/bezel/: bezel.js  bezel.json  bezel.py  test_bezel.py
watch_repair/watch_repair/doctype/bezel_screw/: bezel_screw.js  bezel_screw.json  bezel_screw.py  test_bezel_screw.py
watch_repair/watch_repair/doctype/bra_links/: bra_links.js  bra_links.json  bra_links.py  test_bra_links.py
watch_repair/watch_repair/doctype/bracelet/: bracelet.js  bracelet.json  bracelet.py  test_bracelet.py
watch_repair/watch_repair/doctype/c_b_gasket/: c_b_gasket.js  c_b_gasket.json  c_b_gasket.py  test_c_b_gasket.py
watch_repair/watch_repair/doctype/case/: case.js  case.json  case.py  test_case.py
watch_repair/watch_repair/doctype/case_back/: case_back.js  case_back.json  case_back.py  test_case_back.py
(+190 files in other folders)
